--- a/style/components/_header.scss
+++ b/style/components/_header.scss
@@ -106,7 +106,6 @@ header>div:last-of-type {
 }
 
 label[for="toggle"] img {
-    content: url("../../assets/icon-search.png");
     width: 24px;
     height: 24px;
     display: inline-block;
